# scx_controller

./: .gitignore  Cargo.toml  README.md  clear.sh  h deb  make.py  release.sh  test_build.sh
maketools/: build.py
module/: app_config.toml  changelog.md  customize.sh  module.prop  service.sh  update.json
src/: main.rs
src/activity/: get_tid_info.rs  get_top_pid.rs  mod.rs
src/config/: mod.rs
src/governor/: mod.rs
src/misc/: logger.rs  mod.rs
src/scheduler/: looper.rs  mod.rs
src/utils/: guard.rs  mod.rs  node_reader.rs
