[package]
name = "scx_controller"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.95", default-features = false }
atoi = { version = "2.0.0", default-features = false }
compact_str = { version = "0.9.0", default-features = false, features = [
    "serde",
] }
dumpsys-rs = { git = "https://github.com/reigadegr/dumpsys-rs" }
inotify = { version = "0.11.0", default-features = false }
itoa = { version = "1.0.14", features = [] }
libc = { version = "0.2.170", default-features = false }
likely_stable = "0.1.3"
log = "0.4.26"
mimalloc = { version = "0.1.48", features = ["no_thp", "override"] }
minstant = "0.1.7"
ndk-sys = "0.6.0"
once_cell = { version = "1.20.3", default-features = false }
serde = { version = "1.0.218", default-features = false, features = ["derive"] }
stringzilla = "3.12.0"
taplo = { version = "0.13.2", default-features = false }
tklog = "0.2.9"
toml = { version = "0.8.20", default-features = false, features = ["parse"] }

[build-dependencies]
anyhow = "1.0.95"
vergen = { version = "9.0.4", features = ["build", "cargo", "rustc", "si"] }

[profile.dev]
debug = 0
debug-assertions = true
panic = "abort"
incremental = true

[profile.release]
overflow-checks = false
codegen-units = 1
lto = "fat"
opt-level = 3
strip = true
debug = 0
debug-assertions = false
incremental = false
panic = "abort"
